--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <div class="block"></div>
+        <div class="block right"></div>
         <div class="block left">
             <form action="#">
                 <label for="bookTitle">Enter the title:</label>
@@ -24,7 +24,9 @@
             </form>
         </div>
     </main>
-    <script src="index.js"></script>
+    
     <script src="books.js"></script>
+    <script src="index.js"></script>
+    
 </body>
 </html>
