--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <main>
-        <div class="block right"></div>
-        <div class="block left">
+        <div class="block left"></div>
+        <div class="block right">
             <form action="#">
                 <label for="bookTitle">Enter the title:</label>
                 <input type="text" id="bookTitle" value=""><br>
