--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                 <fieldset>
                     <legend>Add form</legend>
                     <label for="bookTitle">Enter the title:</label>
-                    <input type="text" id="bookTitle" ><br>
+                    <input type="text" id="bookTitle" class="title-ed" ><br>
                     <label for="authorName">Enter the name:</label>
-                    <input type="text" id="authorName" ><br>
+                    <input type="text" id="authorName" class="author-ed" ><br>
                     <label for="bookImage">Load img:</label>
-                    <input type="url" id="bookImage"/><br>
+                    <input type="url" id="bookImage" class="url-ed"/><br>
                     <label for="descrip">Write short description:</label><br>
-                    <textarea name="textarea" id="descrip" cols="30" rows="10"></textarea><br>
+                    <textarea name="textarea" id="descrip" class="descrip-ed" cols="30" rows="10"></textarea><br>
                     <input class="btn sub-btn" type="submit" value="Submit">
                 </fieldset>
             </form>
@@ -29,13 +29,13 @@
                 <fieldset>
                     <legend>Edit form</legend>
                     <label for="bookTitle">Enter the title:</label>
-                    <input type="text" id="bookTitle" value=""><br>
+                    <input type="text" id="bookTitle" value="" class="title-ed"><br>
                     <label for="authorName">Enter the name:</label>
-                    <input type="text" id="authorName" value=""><br>
+                    <input type="text" id="authorName" value="" class="author-ed"><br>
                     <label for="bookImage">Load img:</label>
-                    <input type="url" id="bookImage"><br>
+                    <input type="url" id="bookImage" class="url-ed"><br>
                     <label for="descrip">Write short description:</label><br>
-                    <textarea name="textarea" id="descrip" cols="30" rows="10"></textarea><br>
+                    <textarea name="textarea" id="descrip" class="descrip-ed" cols="30" rows="10"></textarea><br>
                     <input class="btn sub-btn" type="submit" value="Submit">
                 </fieldset>
                 
